# agent-based-financial-market

./: LICENSE  README.md  pyproject.toml
examples/: first-setup.ipynb  simple-run.ipynb
research/: fundamentalist-params.ipynb  simulation-more-zi.ipynb  simulation-negative-shocks.ipynb  simulation-positive-shocks.ipynb  simulation-zi-fundamental.ipynb  simulation.ipynb
src/agents/: __init__.py  etf.py  fundamental.py  fundamentalist.py  technical.py  zero_intelligence.py
src/core/: __init__.py  agent.py  engine.py  order.py  orderbook.py  stats_monitor.py  trade.py
