[tool.poetry]
name = "agent-based-financial-market"
version = "0.1.0"
description = ""
authors = ["Andrey Babkibkin, Ismail Toktonyazov"]
license = "MIT"
readme = "README.md"
packages = [{include = "agent_based_financial_market"}]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
