[tool.poetry]
name = "agent-based-financial-market"
version = "0.1.0"
description = ""
authors = ["Andrey Babkin, Ismail Toktonyazov"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
