[tool.poetry]
name = "agent-based-financial-market"
version = "0.1.0"
description = ""
authors = ["Andrey Babkin, Ismail Toktonyazov"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.22.0"
matplotlib = "^3.7.1"
pandas = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
